--- a/src/assets/style/default.less
+++ b/src/assets/style/default.less
@@ -1,6 +1,6 @@
 @import "~antd/lib/style/themes/default.less";
-@primary-color: #75ce50;
-@processing-color: #75ce50;
+@primary-color: #1890ff; // #d6ebff
+@processing-color: #1890ff;
 @site-heading-color: #0d1a26;
 @site-text-color: #314659;
 @site-text-color-secondary: #697b8c;
