Added support for theme customization

--- a/src/assets/style/home.less
+++ b/src/assets/style/home.less
@@ -66,7 +66,8 @@ svg g {
       text-align: center;
     }
     img {
-      width: 100%;
+      width: 94%;
+      margin-left: 3%;
       margin-top: 20px;
     }
     .button-wrapper {
@@ -164,6 +165,7 @@ svg g {
 .page1 {
   height: 700px;
 }
+
 .page1-line.title-line-wrapper {
   width: 312px;
   margin: 24px auto 76px;
@@ -187,6 +189,8 @@ svg g {
   margin-bottom: 62px;
   display: flex;
   align-items: flex-start;
+  padding-left: 0;
+
   li {
     width: 33.33%;
     display: inline-block;
