--- a/public/editor/style.css
+++ b/public/editor/style.css
@@ -1,9 +1,3 @@
-:root {
-  --color-base: #6e9a04;
-  --color-base-light: #6e9a04;
-  --color-text: #FFF;
-}
-
 aside * {
   z-index: 2;
 }
@@ -60,6 +54,7 @@ aside::before {
   }
 }
 
+/* */
 .zama-popup {
   width: 230px;
   position: absolute;
@@ -128,6 +123,26 @@ aside::before {
   left: calc(50% - 25px);
 }
 
+.field-border {
+  max-width: 400px;
+  position: relative;
+  padding: 10px;
+  border: 1px solid #e5e5e5;
+  height: 372px;
+}
+
+.field-border .field-padding-top {
+  top: 235px;
+}
+
+.field-border .field-padding-left, .field-border .field-padding-right {
+  top: 283px;
+}
+
+.field-border > span {
+  top: 270px;
+}
+
 .zama-chips {
   margin: 5px 0;
   padding: 10px 4px;
@@ -166,4 +181,13 @@ aside::before {
 
 .uk-form-icon-flip~.uk-input {
   padding-right: 50px!important;
+}
+
+* {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
